added login form template, make parts of  - header, footer, categories, posts, login

--- a/Template.html
+++ b/Template.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Template</title>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/ourStyles.css"/>
-    <link rel="stylesheet" href="fonts/"/>
 </head>
 <body>
 
@@ -51,9 +51,12 @@
 
     <section class="section-tout clearfix">
         <div class="container">
-            <div class="col-md-8">
+
+            <!--Posts-->
+            <div class="col-md-8 col-xs-12">
+
                 <div class="row">
-                    <div class="categories col-xs-12 col-md-12">Posts</div>
+                    <div class="categories col-md-12">Posts</div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
@@ -63,7 +66,11 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet dignissimos enim in laborum libero molestias nemo nesciunt qui rerum. Architecto atque cumque excepturi inventore molestiae odit perferendis sint totam.
                     </div>
                 </div>
+
+
             </div>
+
+            <!--Categories-->
             <div class="col-md-3 col-xs-12 pull-right">
                 <div class="row">
                     <div class="categories">Categories</div>
@@ -84,8 +91,8 @@
 
                 </div>
             </div>
-        </div>
-    </section>
+        </div> <!--div Container-->
+    </section> <!--Section-tout -->
 
 
 
